[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/room_0/background/main.png" type="Texture" id=1]
[ext_resource path="res://scenes/rooms/Room_0/Room_0_main.gd" type="Script" id=2]
[ext_resource path="res://objects/Interactive/MoveButton/MoveTo.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/room_0/objects/paper_sticked.png" type="Texture" id=4]
[ext_resource path="res://scenes/rooms/Room_0/MAIN_ROOM_SCRIPTS/StickedPaper.gd" type="Script" id=5]
[ext_resource path="res://sprites/room_0/background/main_screamer.png" type="Texture" id=6]
[ext_resource path="res://scenes/rooms/Room_0/KeycardReader.gd" type="Script" id=7]
[ext_resource path="res://scenes/rooms/Room_0/ExitToCorridor.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "effect"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 3.03143 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Room_0" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
RoomName = "ROOM_0"
RoomPart = "MAIN"

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTo2" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.621
anchor_right = 0.635
anchor_bottom = 0.679
margin_left = -4.0
margin_top = 0.319946
margin_right = -0.200073
margin_bottom = -0.320007
location_name = "ROOM_0"
location_part = "DRAWER"
sound = "res://sounds/enviroment/wood_drawer.wav"

[node name="MoveTo" parent="." instance=ExtResource( 3 )]
anchor_left = 0.169
anchor_top = 0.252
anchor_right = 0.328
anchor_bottom = 0.824
margin_left = -0.480042
margin_top = -0.160004
margin_right = 0.23999
margin_bottom = 0.0799561
location_name = "ROOM_0"
location_part = "WARDOBE"
sound = "res://sounds/enviroment/locker_open.wav"

[node name="StickedPaper" type="TextureRect" parent="."]
anchor_left = 0.518
anchor_top = 0.222
anchor_right = 0.625
anchor_bottom = 0.412
margin_left = 0.440002
margin_top = 0.239975
margin_right = 819.0
margin_bottom = 819.04
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
ItemName = "PaperKey0"

[node name="MoveTo3" parent="." instance=ExtResource( 3 )]
anchor_left = 0.052
anchor_top = 0.331
anchor_right = 0.081
anchor_bottom = 0.392
margin_left = 0.829994
margin_top = -0.14505
margin_right = 0.149994
margin_bottom = -0.0250244
location_name = "ROOM_0"
location_part = "UV"
sound = "res://sounds/enviroment/light_switch_on_off.wav"

[node name="MoveTo4" parent="." instance=ExtResource( 3 )]
margin_left = 1311.0
margin_top = 728.0
margin_right = 1552.0
margin_bottom = 817.0
location_name = "ROOM_0"
location_part = "BOOK"
playSound = false

[node name="screamer" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="screamer"]
anims/effect = SubResource( 1 )

[node name="MoveTo5" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.093
anchor_top = 0.128
anchor_right = 0.093
anchor_bottom = 0.128
margin_left = -0.559998
margin_top = 20.76
margin_right = 84.44
margin_bottom = 874.76
location_name = "CORRIDOR_0"
location_part = "MAIN"
sound = "res://sounds/enviroment/locker_open.wav"

[node name="ExitToCorridor" type="TextureButton" parent="."]
anchor_left = 0.093
anchor_top = 0.141
anchor_right = 0.093
anchor_bottom = 0.144
margin_left = -0.559998
margin_top = -0.279999
margin_right = 93.44
margin_bottom = 860.48
mouse_default_cursor_shape = 16
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeycardReader" type="TextureButton" parent="."]
anchor_left = 0.036
anchor_top = 0.415
anchor_right = 0.036
anchor_bottom = 0.415
margin_left = 0.879997
margin_top = -0.200012
margin_right = 83.88
margin_bottom = 110.8
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ExitToCorridor" to="." method="_on_ExitToCorridor_pressed"]
[connection signal="drop_correct" from="KeycardReader" to="." method="_on_KeycardReader_drop_correct"]
